--- a/templates/Areas.html
+++ b/templates/Areas.html
@@ -1,9 +1,11 @@
-{% extends "Dash0.html" %}
 
-{% block data %}
+{% extends "Dash0.html" %}
+{% block Areas %}
+
+
 <div id="datawin" class="innertube">
 
-	    <table id="Areas-table">
+	    <table id="areas-table">
 				<thead>
 	      <tr>
 	      <th class="c1" >No</th>
@@ -31,6 +33,5 @@
 	      {% endfor %}
 			</tbody>
 	    </table>
-
 </div>
-{% endblock data %}
+{% endblock Areas %}
