--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -7,26 +7,21 @@
 				<thead>
 	      <tr>
 	      <th class="c1" >CC</th>
-				<th class="c1" >Firstname</th>
-				<th class="c1">Surname</th>
 				<th class="c1">Areaname</th>
-	      <th class="c1">email</th>
-	      <th class="c1">Mobile</th>
+				<th class="c1" >Constituency</th>
+				<th class="c1">Candidate</th>
+
 	    </tr>
 	      </thead>
 				<tbody style="height: 70px">
 					{% for index,row in context.group.iterrows() %}
 	      <tr>
-	        <td class="c1">{{ row['CC'] }}</td>
-					<td class="c1">{{ row['Firstname'] }}</td>
-					<td class="c1">{{ row['Surname'] }}</td>
+	        <td class="c1">{{ row['No'] }}</td>
 					<td class="c1">{{ row['Area'] }}</td>
-					<td class="c1">{{ row['email'] }}</td>
-					<td class="c1"> +44
-(0
-{{ (row['mobile']|string)[0:4]}}
-){{(row['mobile']|string)[4:]}}
-  </td>
+					<td class="c1">{{ row['Constituency'] }}</td>
+					<td class="c1">{{ row['Candidate'] }}</td>
+
+
 	      </tr>
 	      {% endfor %}
 			</tbody>
