--- a/templates/captains.html
+++ b/templates/captains.html
@@ -1,6 +1,7 @@
 {% extends "Dash0.html" %}
 
 {% block data %}
+
 <div id="datawin" class="innertube">
 
 	    <table id="captains-table">
@@ -31,4 +32,6 @@
 	    </table>
 
 </div>
-{% endblock data %}
+
+
+{% endblock datablock %}
