--- a/templates/Areas.html
+++ b/templates/Areas.html
@@ -8,6 +8,7 @@
 	    <table id="areas-table">
 				<thead>
 	      <tr>
+				<th class="c1" >?</th>
 	      <th class="c1" >No</th>
 				<th class="c1" >Area</th>
 				<th class="c1">Constituency</th>
@@ -19,6 +20,10 @@
 				<tbody style="height: 70px">
 					{% for index,row in context.layeritems.iterrows() %}
 	      <tr>
+					<td>
+						<input type="checkbox" id="selectRow1" name="selectRow[]" value="1" class="selectRow">
+						<label for="selectRow1" class="visually-hidden"></label>
+					</td>
 	        <td class="c1">{{ row['No'] }}</td>
 					<td class="c1">{{ row['Area'] }}</td>
 					<td class="c1">{{ row['Constituency'] }}</td>
