--- a/templates/captains.html
+++ b/templates/captains.html
@@ -7,6 +7,7 @@
 	    <table id="captains-table">
 				<thead>
 	      <tr>
+				<th class="c1" >?</th>
 	      <th class="c1" >CC</th>
 				<th class="c1" >Firstname</th>
 				<th class="c1">Surname</th>
@@ -17,6 +18,9 @@
 				<tbody style="height: 70px">
 					{% for index,row in context.group.iterrows() %}
 	      <tr>
+					<td>
+						<input type="checkbox" id="selectRow1" name="selectRow[]" value="1" class="selectRow">
+					</td>
 	        <td class="c1">{{ row['CC'] }}</td>
 					<td class="c1">{{ row['Firstname'] }}</td>
 					<td class="c1">{{ row['Surname'] }}</td>
@@ -34,4 +38,4 @@
 </div>
 
 
-{% endblock datablock %}
+{% endblock data %}
