--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -123,7 +123,7 @@
 			</tbody>
 			<tfoot>
 						<tr>  <td colspan='10' style="font-weight: bold;font-size: 9pt;text-align: center; border-left: 0px;border-right: 0px;border-bottom: 0px;">
-							VI Box:  R=Reform   |   M=Maybe   I   C=Conservative  |  S=Labour (Socialists)  |  W=Won’t vote  |  X=Won’t say <br>
+							VI Box:  R=Reform   |   Z=Maybe   I   C=Conservative  |  S=Labour (Socialists)  |  W=Won’t vote  |  X=Won’t say <br>
 							Notes Box:  How did they vote in the last election?   (cont.  LD=Lib Dems   |   G=Green   |   I=Independent) <br>
 							Promoted by ReformUK, 124 City Road, London, EC1V 2NX | For ReformUK authorised users only | Personal Data - Destroy after use</td>
 						</tr>
