--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -43,7 +43,7 @@
     <b>Please collect the data below and upload data for area overview.</b>
     </span>
 
-		<button type="button" id="save-btn" onclick="layerUpdate('/UNITED_KINGDOM/ENGLAND/SURREY/SURREY_HEATH/BAGSHOT/KA/STREETS/KA-LUPIN_CLOSE-DATA.html')" style="font-size: 12pt;color: gray">SAVE</button>
+		<button type="button" id="save-btn" onclick="layerUpdate({{ datafile }})" style="font-size: 12pt;color: gray">SAVE</button>
       <button id="Show_the_Walk_Map">
         <label class="guil-action_button" for="Show_the_Walk_Map"  >
           <a href= {{ mapfile }} >WALKMAP</a>
