--- a/static/style.css
+++ b/static/style.css
@@ -64,6 +64,7 @@ body {
 		#nav {
       z-index: 12;
 			position: absolute;
+			overflow: scroll;
 			top: 0;
 			right: 0;
 			width: 290px;
@@ -77,6 +78,7 @@ body {
 	    border-color: indigo;
 	    cursor: pointer;
 	    opacity: 0.8;
+			height: 600px;
 		}
     #logwin {
 			height: 200px;
