--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -89,8 +89,8 @@
 				<tbody>
 					{% for index,row in group.iterrows() %}
 	      <tr>
-	        <td class="c1">{{ row['PD'] }}</td>
-	        <td class="c2">{{ '{:.1f}'.format(row['ENOP']) }}</td>
+	        <td class="c1">{{ row['WalkName'] }}</td>
+	        <td class="c2">{{ row['ENOP'] }}</td>
 					<td class="c3">{{ row['ElectorName'] }}</td>
 					{% if row['AddressPrefix'] |string != "nan" and row['AddressNumber'] |string|length  %}
 	           <td class="righted">{{ row['AddressPrefix'] | replace('nan', '') }}, {{row['AddressNumber'] | int }}</td>
