--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -53,7 +53,7 @@
       var selnode = '{{ context.mapfile }}';
       alert(selnode);
 //      const areas_div = parent.document.getElementById("Areas-table")
-fetch('{{ url_for('displayareas',selnode=selnode) }}', {
+fetch("{{ url_for('displayareas',selnode=selnode) }}", {
     method: "GET",
     headers: { "Content-Type": "application/json" },
 })
