--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -51,8 +51,8 @@
       li.appendChild(parent.document.createTextNode(old+":completed"));
       ul.appendChild(li);
       var selnode = "{{ context.mapfile }}";
-      var selurl = {{ url_for('displayareas',selnode=selnode) }}
-      alert(selurl, selnode);
+      var selurl = "{{ url_for('displayareas', selnode='PLACEHOLDER') }}".replace("PLACEHOLDER", selnode)
+      alert(selurl+selnode);
 //      const areas_div = parent.document.getElementById("Areas-table")
 fetch(selurl, {
     method: "GET",
