--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -3,7 +3,7 @@
 <div id="mapwin" class="innertube">
     <h1>elecTrek - The Canvassing App</h1>
     <h1>Welcome to your dashboard, {{ session['username'] }}</h1>
-    <iframe name="iframe1" src= {{ url_for('map',path=context.mapfile) }} width="1200" height="800" onload="updateMessages({{ url_for('displayareas',path=context.mapfile) }})" >  </iframe>
+    <iframe name="iframe1" src= {{ url_for('map',path=context.mapfile) }} width="1200" height="800" onload="updateMessages({{ url_for('displayareas',selnode=context.mapfile) }})" >  </iframe>
     <script >
       // Listen to message from child window
 
