--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -52,9 +52,9 @@
       ul.appendChild(li);
       var currentPath = window.location.pathname;
       console.log("Current Path:", currentPath); // Debugging output
-
+      alert("Current Path:"+ currentPath);
       // ✅ Construct the fetch URL dynamically
-      var selurl = `/displayareas${currentPath}`;
+      var selurl = `/displayareas/${currentPath}`;
       console.log("Fetching from:", selurl);
 
 //      const areas_div = parent.document.getElementById("Areas-table")
