--- a/static/style.css
+++ b/static/style.css
@@ -81,9 +81,14 @@ body {
 			height: 600px;
 		}
     #logwin {
-			height: 200px;
-			height: 100px;
-			overflow: auto;
+			width: 100%;
+			    height: 300px;  /* Adjust height as needed */
+			    background: #111;
+			    color: #0f0; /* Green text for a terminal look */
+			    padding: 10px;
+			    font-family: monospace;
+			    border: 1px solid #444;
+			overflow-y: auto;
 			display: flex;
 			flex-direction: column;
 			z-index: 11;
@@ -93,7 +98,6 @@ body {
 			width: 290px;
 			font-weight: normal;
 			background: white;
-		  padding : 16px 20px ;
 		  font-size: 1em;
 		  border-radius: 3px;
 		  border-color: indigo;
