--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -56,9 +56,9 @@
       old = pessages.pop();
       var ul = parent.document.getElementById("logwin");
       var li = parent.document.createElement("li");
-      const tabhead = parent.document.querySelector("div > table > thead");
-      const tabbody = parent.document.querySelector("div > table > tbody");
-      tabbody.checked = true;
+      var tabhead = parent.document.querySelector("div > table > thead");
+      var tabbody = parent.document.querySelector("div > table > tbody");
+      
 
       li.appendChild(parent.document.createTextNode(old+":completed"));
       ul.appendChild(li);
