--- a/static/style.css
+++ b/static/style.css
@@ -13,11 +13,11 @@ body {
 		#main {
 			break-before: always;
 			position: fixed;
-			top: 10px;
+			top: 110px;
 			right : 240px;
 			left: 20px;
 			bottom: 10px; /* Set this to the height of the footer */
-			overflow: auto;
+			overflow-y: auto;
 			background: white;
 		}
 
