--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -108,7 +108,7 @@
 	       	<td class="VI"><span> <input type="text" placeholder= "{{ row['VI'] | replace('nan', '') }}" onchange="inputVI(this)" maclength="2" size="2" name= '{{"example-unique-id-A" ~ row['ENOP']}}' id='{{"example-unique-id-E" ~ row['ENOP']}}' />
 				    </span></td>
 	        <td class="NS" ><span>
-						<input type="text" placeholder= "{{ row['Notes'] | replace('nan', '') }}" onchange="inputNS(this)" onchange="inputNS(this)" name='{{"example-unique-id-A" ~ row['ENOP']}}' id='{{"example-unique-id-F" ~ row['ENOP']}}' />
+						<input type="text" placeholder= "{{ row['Notes'] | replace('nan', '') }}" onchange="inputNS(this)" name='{{"example-unique-id-A" ~ row['ENOP']}}' id='{{"example-unique-id-F" ~ row['ENOP']}}' />
 	        {{ row['Notes'] }}
 	          </span>
 	        </td>
