--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -5,40 +5,9 @@
 
 	<div id="header">
     <h1>Postal and Non Postal Vote Canvass Cards </h1>
-		<span>
-			<b>Ward: {{ prodstats['wards'] }} ,</b>
-		</span>
-		<span>
-    	<b>Polling District: {{ prodstats['PDs'] }} ,</b
-    </span>
-    <span>
-    	<b>Electors:</b>
-    	<b>{{ prodstats['groupelectors'] }} ,</b>
-    </span>
-    <span>
-    	<b>Houses:</b>
-    	<b>{{ prodstats['houses'] }} ,</b>
-    </span>
-    <span>
-    	<b>Streets:</b>
-    	<b>{{ prodstats['streets'] }} ,</b>
-    </span>
-    <span>
-        <b>Climb(m):</b>
-    		<b>{{ prodstats['climb'] }} ,</b>
-    </span>
-    <span>
-        <b>Housing Density (UKAv=1.97):</b>
-    		<b>{{ prodstats['housedensity'] }} ,</b>
-    </span>
-    <span>
-        <b>Leafleting Time:</b>
-    		<b>{{ prodstats['leafhrs'] | round | int }}hrs {{ (prodstats['leafhrs']%1*60) | round | int }}mins ,</b>
-    </span>
-    <span>
-        <b>Canvassing Time:</b>
-    		<b>{{ prodstats['canvasshrs'] | round | int }}hrs {{ (prodstats['leafhrs']%1*60) | round | int }}mins.</b>
-    </span>
+		{% for x,y in prodstats.items() %}
+				<ul> {{ x }} : {{ y }} </ul>
+		{% endfor %}
     <span>
     <b>Please collect the data below and upload data for area overview.</b>
     </span>
