--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -106,8 +106,8 @@
 	        <td class="righted">{{ row['Postcode'] }}</td>
 					<td class="AV"><span>{{ row['AV'] | replace('nan', '') }}  </span></td>
 
-	       	<td class="VI"> <input type="text" placeholder= "{{ row['VI'] | replace('nan', '') }}" onchange="inputVI(this)" maxlength="2" size="3" name= '{{"example-unique-id-A" ~ row['ENOP']}}' id='{{"example-unique-id-E" ~ row['ENOP']}}' /></td>
-	        <td class="NS" ><input type="text" placeholder= "{{ row['Notes'] | replace('nan', '') }}" onchange="inputNS(this)" name='{{"example-unique-id-A" ~ row['ENOP']}}' id='{{"example-unique-id-F" ~ row['ENOP']}}' /></td>
+	       	<td class="VI"> <input type="text" placeholder= "{{ row['VI'] | replace('nan', '') }}" onclick="inputVI(this)" maxlength="2" size="3" name= '{{"example-unique-id-A" ~ row['ENOP']}}' id='{{"example-unique-id-E" ~ row['ENOP']}}' /></td>
+	        <td class="NS" ><input type="text" placeholder= "{{ row['Notes'] | replace('nan', '') }}" onclick="inputNS(this)" name='{{"example-unique-id-A" ~ row['ENOP']}}' id='{{"example-unique-id-F" ~ row['ENOP']}}' /></td>
 	      </tr>
 	      {% endfor %}
 			</tbody>
